--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,7 @@
 html,
 body {
+  background: #222;
+  color: #f5f5f5;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
