--- a/components/Elevator/Elevator.module.scss
+++ b/components/Elevator/Elevator.module.scss
@@ -11,10 +11,21 @@
   background-color: $black;
   border: 1px solid $white;
   border-radius: 5px;
+  display: flex;
   flex: 0 1 25%;
   height: 30%;
   margin: 0 10px;
   padding: 20px;
+  align-items: center;
+}
+
+.elevatorDirection {
+  color: rgba(255, 255, 255, 0.04);
+  display: flex;
+  flex: 1 1 50%;
+  font-size: 5em;
+  place-content: center;
+  text-align: center;
 }
 
 .elevator {
